Update: Existing to v1.2.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = 'modkit'
-version = "1.1.0"
+version = "1.2.0"
 description = "A kit containing tools for better programming."
 requires-python = ">=3.8"
 dependencies = []
@@ -16,6 +16,7 @@ authors = [
 maintainers = [
     {name = "Soumyo Deep Gupta", email = "deep.main.ac@gmail.com"}
 ]
+keywords = ['d33p0st','modkit', 'modstore', 'module', 'kit']
 
 [tool.setuptools.package-data]
 "modkit" = ["*.pyi"]
