--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = 'modkit'
-version = "1.2.0"
+name = 'toolcat'
+version = "1.0.0"
 description = "A kit containing tools for better programming."
 requires-python = ">=3.8"
-dependencies = []
+dependencies = ['colorama']
 readme = {file = "README.md", content-type = "text/markdown"}
 license = { file = "LICENSE" }
 authors = [
