--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = 'toolcat'
-version = "1.0.0"
+name = 'goopywoopy'
+version = "0.0.0"
 description = "A kit containing tools for better programming."
 requires-python = ">=3.8"
 dependencies = ['colorama']
@@ -16,12 +16,12 @@ authors = [
 maintainers = [
     {name = "Soumyo Deep Gupta", email = "deep.main.ac@gmail.com"}
 ]
-keywords = ['d33p0st','modkit', 'modstore', 'module', 'kit']
+keywords = ['d33p0st','goopywoopy', 'modstore', 'module', 'kit', 'OOP', 'object', 'ABC']
 
 [tool.setuptools.package-data]
-"modkit" = ["*.pyi"]
+"goopywoopy" = ["*.pyi"]
 
 [project.urls]
-GitHub = "https://github.com/d33p0st/modkit"
-Issues = "https://github.com/d33p0st/modkit/issues"
-Pull-Request = "https://github.com/d33p0st/modkit/pulls"
+GitHub = "https://github.com/d33p0st/goopywoopy"
+Issues = "https://github.com/d33p0st/goopywoopy/issues"
+Pull-Request = "https://github.com/d33p0st/goopywoopy/pulls"
